TSP (via greedy algorithm) and Vertex Cover

--- a/UCSDGraphs/src/application/.gitignore
+++ b/UCSDGraphs/src/application/.gitignore
@@ -6,3 +6,7 @@
 /RouteVisualization.class
 /SelectManager.class
 /TestApp.class
+/Solution.class
+/Solution$Edge.class
+/Solution$Node.class
+/Solution$TempNode.class
